--- a/package.json
+++ b/package.json
@@ -12,14 +12,18 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.12.0",
+    "@jest/globals": "^29.7.0",
+    "@types/jest": "^29.5.13",
     "@types/node": "^22.7.4",
     "eslint": "^9.12.0",
     "globals": "^15.10.0",
+    "nock": "^14.0.0-beta.14",
+    "ts-jest": "^29.2.5",
     "typescript-eslint": "^8.8.0"
   },
   "scripts": {
     "build": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
